--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: timescale/timescaledb:latest-pg14
+    image: registry.cn-hangzhou.aliyuncs.com/thingspanel/timescaledb:14
     privileged: true
     volumes: # 注意！如果在win系统上运行，可能会有权限问题，可更改为卷映射(去掉文件末尾的卷注释，将下方./data/timescaleDB改为卷timescaleDB即可)
       - ./data/timescaleDB:/var/lib/postgresql/data
@@ -64,7 +64,7 @@ services:
     restart: unless-stopped
 
   redis:
-    image: redis:6.2.7
+    image: registry.cn-hangzhou.aliyuncs.com/thingspanel/redis:6.2.7
     command: redis-server --requirepass redis
     volumes:
       - ./data/redis/data:/data
