--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,12 @@ services:
       extnetwork:
         ipv4_address: 172.50.0.4
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres && psql -U postgres -d ThingsPanel -c 'SELECT 1' || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
     restart: unless-stopped
 
   gmqtt:
