--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - thingspanel_network
 
   postgres:
-    image: timescale/timescaledb:2.8.1-pg14
+    image: ghcr.io/thingspanel/timescaledb:2.8.1-pg14
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -66,7 +66,7 @@ services:
       - thingspanel_network
 
   redis:
-    image: redis:6.2.7
+    image: ghcr.io/thingspanel/redis:6.2.7
     command: redis-server --requirepass redis
     volumes:
       - redis_data:/data
