--- a/.github/workflows/updateImages.yml
+++ b/.github/workflows/updateImages.yml
@@ -74,10 +74,10 @@ jobs:
         run: |
           IFS=' ' read -r -a tags_array <<< "$new_tags"
           for tag in "${tags_array[@]}"; do
-            repo=${tag%:*}
-            existing_tags=$(skopeo list-tags docker://registry.jihulab.com/thingspanel/docker-images/$repo)
-            echo $existing_tags
-            if [[ $existing_tags == *"$tag"* ]]; then
+            #repo=${tag%:*}
+            image="docker://registry.jihulab.com/thingspanel/docker-images/$tag"
+            echo $image
+            if skopeo inspect "image" > /dev/null 2>&1; then
                 echo "The image $tag already exists,skipping the copy."
             else
                 echo $tag
