Fix: 部署文档bug修复

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   frontend:
-    image: gregistry.jihulab.com/thingspanel/docker-images/thingspanel-vue:v1.1.4
+    image: registry.jihulab.com/thingspanel/docker-images/thingspanel-vue:v1.1.4
     ports:
       - "8080:8080"
     environment:
