--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,8 +97,8 @@ services:
       - "GOTP_DB_PSQL_LOG_LEVEL=3"
       - "GOTP_DB_REDIS_ADDR=redis:6379"
       - "GOTP_DB_REDIS_PASSWORD=redis"
-      - "GOTP_MQTT_SERVER=gmqtt"
-      - "GOTP_MQTT_ACCESS_ADDRESS=gmqtt:1883"
+      - "GOTP_MQTT_SERVER={MQTT_HOST}"
+      - "GOTP_MQTT_ACCESS_ADDRESS={MQTT_HOST}:1883"
       - "GOTP_MQTT_BROKER=gmqtt:1883"
       - "GOTP_LOG_LEVEL=error"
     depends_on:
